// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Box> - basic settings 1`] = `
<div
  style={
    Object {
      "WebkitBoxSizing": "border-box",
      "backgroundColor": "#ff0000",
      "boxSizing": "border-box",
      "margin": 8,
      "padding": 8,
    }
  }
>
  Title
</div>
`;

exports[`<Box> - className should be passed correctly 1`] = `
<div
  className="test"
  style={
    Object {
      "WebkitBoxSizing": "border-box",
      "boxSizing": "border-box",
    }
  }
/>
`;
